--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.25.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "redis": "^4.0.3",
     "sequelize": "^6.15.0",
     "validate.js": "^0.13.1"
   }
