:wrench: move redis connection config to .env

--- a/.env_prod.env
+++ b/.env_prod.env
@@ -3,3 +3,6 @@ TMDB_IMAGE_BASE_URL=https://image.tmdb.org/t/p/
 TMDB_API_KEY=
 TMDB_API_TIMEOUT=10000
 SERVER_PORT=5000
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=redis2022!
