:sparkles: added mysql db and created user apis

--- a/.env_prod.env
+++ b/.env_prod.env
@@ -6,3 +6,10 @@ SERVER_PORT=5000
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASS=redis2022!
+MYSQL_DB=thintmdb
+MYSQL_USER=root
+MYSQL_PASS=mySql2022!
+SEQUELIZE_DB=mysql
+DB_HOST=localhost
+USR_TKN_EXPIRATION=1440
+TOKEN_SECRET=thindtmdb2022!
