:package: added cors module

--- a/.env_prod.env
+++ b/.env_prod.env
@@ -12,5 +12,5 @@ MYSQL_USER=root
 MYSQL_PASS=mySql2022!
 SEQUELIZE_DB=mysql
 DB_HOST=localhost
-USR_TKN_EXPIRATION=1440
+USR_TKN_EXPIRATION="5d"
 TOKEN_SECRET=thindtmdb2022!
